--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,9 @@
         "tcg/voyager": "^1.1"
     },
     "require-dev": {
-        "filp/whoops": "~2.0",
+        "barryvdh/laravel-debugbar": "^3.2",
         "barryvdh/laravel-ide-helper": "^2.5",
+        "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
         "phpunit/phpunit": "~6.0",
