--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,14 @@
 /storage/*.key
 /vendor
 /.idea
+/.vscode
 /.vagrant
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
+.phpunit.result.cache
 .phpstorm.meta.php
 _ide_helper.php
 _ide_helper_models.php
