--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ yarn-error.log
 .phpstorm.meta.php
 _ide_helper.php
 _ide_helper_models.php
+/public/vendor/tcg/voyager/assets/css
+/public/vendor/tcg/voyager/assets/fonts
+/public/vendor/tcg/voyager/assets/js
