--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,6 @@ _ide_helper.php
 _ide_helper_models.php
 /public/vendor/tcg/voyager/assets/css
 /public/vendor/tcg/voyager/assets/fonts
-/public/vendor/tcg/voyager/assets/js
+/public/vendor/tcg/voyager/assets/js/*
+!/public/vendor/tcg/voyager/assets/js/langs
+!/public/vendor/tcg/voyager/assets/js/langs/*
