--- a/.env.example
+++ b/.env.example
@@ -23,7 +23,8 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_TEST_ACCOUNT=tuemail@google.com
+#Email para testear sin cambiar la config
+#MAIL_TEST_ACCOUNT=tuemail@google.com
 MAIL_DRIVER=log
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
