--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,15 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "anouar/fpdf": "dev-master",
         "barryvdh/laravel-translation-manager": "^0.5.2",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
-        "tcg/voyager": "1.1.*"
+        "tcg/voyager": "1.1.*",
+        "setasign/fpdf": "^1.8",
+        "setasign/fpdi": "^2.2",
+        "setasign/fpdi-tfpdf": "2.2"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
